--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,35 @@
+= 2.1.3 =
+
+* [new] wordpress 5.6 support
+* [updated] wp-content-aware-engine library
+* [updated] freemius sdk
+
+= 2.1.2 =
+
+* [new] identical taxonomy names are now displayed with their post type
+* [fixed] error when attempting to add member to non-existing level
+* [fixed] non-member redirection for custom links
+* [fixed] taxonomy and attachment condition suggestions would not display all results
+
+= 2.1.1 =
+
+* [fixed] users could not be added to levels, regression from v2.1
+
+= 2.1 =
+
+* [new] intelligent search by id in post type condition
+* [new] intelligent search by id, email in author condition
+* [new] ui and performance improvements
+* [new] wordpress 5.5 support
+* [new] restrict shortcode supports multiple levels
+* [new] restrict shortcode drip_days parameter
+* [new] RUA_User_Level_Interface and RUA_Level_Interface interfaces
+* [updated] wp-content-aware-engine library
+* [updated] freemius sdk
+* [updated] RUA_User_Interface interface
+* [updated] improved non-member redirection
+* [fixed] condition option to auto-select new children
+
 = 2.0 =
 
 * [new] default access option to lockdown levels
